fix: fixed colors (difference in brightness and contrast between screens)

--- a/src/colors.css
+++ b/src/colors.css
@@ -1,8 +1,8 @@
 :root {
-    --background: #09000e;
-    --middleground: #170023;
-    --foreground: #8d00e8;
-    --text-color: #f4e6fd;
+    --background: #0f0a17;
+    --middleground: #221734;
+    --foreground: #9d6df7;
+    --text-color: #f8edff;
     --heading-color: white;
     --icon-color: white;
     --discord-color: #6800f1;
